NMS-20120: drop m_ prefixes and use StringUtils.isBlank
Address review (same as #8710): remove the m_ prefix from all service fields
(eventProxy, the lock fields, and the path-outage DAOs), drop the now-redundant
@Qualifier, and use org.apache.commons.lang.StringUtils.isBlank for the
null-or-blank checks.